<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About"
    android:background="@color/graylight"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/gradientbackground"
                android:orientation="vertical">

                <Button
                    style="@style/Widget.AppCompat.ActionButton.CloseMode"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/edit_button"
                    android:background="@drawable/ic_baseline_settings_24" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="113dp"
                    android:layout_height="106dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/username"
                    android:textColor="@color/colorAccent"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="277dp"
                android:layout_height="84dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="250dp">

                <Spinner
                    android:id="@+id/spinner_tahun"
                    android:layout_width="276dp"
                    android:layout_height="24dp"
                    android:layout_gravity="top"
                    android:entries="@array/fidget_tahun"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Alpha"
                                android:textSize="13sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/Alphacolor"
                                android:textSize="13sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Ijin"
                                android:textSize="13sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/Alphacolor"
                                android:textSize="13sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="4dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Sakit"
                                android:textSize="13sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/Alphacolor"
                                android:textSize="13sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
        <!--    <LinearLayout-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="match_parent">-->
        <LinearLayout
            android:layout_width="248dp"
            android:layout_height="253dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_baseline_person_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="Nama "
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Nama"
                        android:textSize="10sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_baseline_person_pin_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="NIM"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/NIM"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_baseline_email_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="Email "
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Email"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_baseline_phone_android_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="Phone "
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Phone"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnlogout"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35sp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/btn_logout"
                android:letterSpacing="0.1"
                android:text="LOG OUT"
                android:textColor="@color/colorAccent"
                android:textSize="10sp"
                android:textStyle="bold" />
        </LinearLayout>
        <!--    </LinearLayout>-->

    </LinearLayout>
</LinearLayout>